--- a/src/pages/blog/2018-07-07-delancey.md
+++ b/src/pages/blog/2018-07-07-delancey.md
@@ -3,7 +3,7 @@ templateKey: blog-post
 published: true
 title: Delancey get what they want
 subtitle: E&C shopping centre application narrowly approved
-date: '2018-07-09'
+date: 2018-07-09
 ---
 Shopping centre owner and developer Delancey's [proposals for the Elephant shopping centre](https://planning.southwark.gov.uk/online-applications/applicationDetails.do?activeTab=externalDocuments&keyVal=_STHWR_DCAPR_9569810) narrowly secured approval from the [planning committee last Tuesday ](https://twitter.com/se1/status/1014434809962225664).  The approval is subject to Mayor Sadiq Khan endorsing the decision and the successful conclusion of S106 negotiations, to seal the legal contract between Southwark and Delancey for the delivery of the development.  A late application to Historic England for listing the shopping centre has also to be resolved.
 
